# orca

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
orca/: __main__.py  analyzer.py  app.py  cli.py  middleware.py  parser.py  router.py
tests/: test_analyzer.py  test_parse.py
