[tool.poetry]
name = "orca"
version = "0.1.0"
description = ""
authors = ["askerka <asduj@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
pydantic-typeddict = "^0.1.0"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
